start of updating plan_generator

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-degreeworks_pdf_path = "degreeworks.pdf"
-graduate_study_plan_path = "graduate_study_plan.pdf"
-four_year_schedule_path = "four_year_schedule.pdf"
+degreeworks_pdf_path = "input/allcscourses.pdf"
+graduate_study_plan_path = "input/Graduate Study Plans -revised.xlsx"
+four_year_schedule_path = "input/4-year schedule.xlsx"
 output_excel_filename = "recommended_class_plan.xlsx"
 output_directory = "outputs/"
 course_catalog_url = "https://catalog.columbusstate.edu/course-descriptions/"
